Removed the SMTP from the email labels for multiple email packages.

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -812,11 +812,11 @@ Setting_Label_email.queueMaxAge=Maximum Email Queue Age
 Setting_Label_email.sendpassword=Send Password Email
 Setting_Label_email.sendUsername=Send User Name Email
 
-Setting_Label_email.profile.list=SMTP Email Profiles
-Setting_Label_email.smtp.addresses=SMTP Email Server Address
-Setting_Label_email.smtp.ports=SMTP Email Server Port
-Setting_Label_email.smtp.usernames=SMTP Email Server User Name
-Setting_Label_email.smtp.userpasswords=SMTP Email Server Password
+Setting_Label_email.profile.list=Email Profiles
+Setting_Label_email.smtp.addresses=Email Server Address
+Setting_Label_email.smtp.ports=Email Server Port
+Setting_Label_email.smtp.usernames=Email Server User Name
+Setting_Label_email.smtp.userpasswords=Email Server Password
 Setting_Label_email.default.fromAddresses=Default From Address
 
 Setting_Label_email.smtp.address=SMTP Email Server Address
