--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -12,6 +12,7 @@
   "Button_More": "More",
   "Button_OK": "OK",
   "Button_OTP": "OTP",
+  "Button_Show": "Show",
   "Button_SMS": "SMS",
   "Button_Unlock": "Unlock",
   "Button_Verifications": "Verifications",
@@ -22,18 +23,22 @@
   "Display_HelpdeskOtpValidation": "Instruct the user to load their mobile authentication app and share the current pass code.",
   "Display_PasswordGeneration": "The following passwords have been randomly generated for you.  These passwords are based on real words to make them easier to remember, but have been modified to make them difficult to guess.",
   "Display_PleaseWait": "Loading...",
+  "Display_Random": "Random",
   "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
   "Display_SearchResultsNone": "No results",
+  "Display_SetRandomPasswordPrompt": "Set a new random password for this user?",
   "Display_TokenDestination": "Token Destination",
   "Field_DateTime": "Date/Time",
   "Field_Display": "Display",
   "Field_LdapProfile": "LDAP Profile",
   "Field_Method": "Method",
+  "Field_NewPassword": "New Password",
   "Field_Policy": "Policy",
   "Field_Profile": "Profile",
   "Field_Username": "User Name",
   "Long_Title_VerificationSend": "Before this user can be selected, the user's identity must be verified.  Please select a verification method.",
   "Placeholder_Search": "Search",
+  "Title_ChangePassword": "Change Password",
   "Title_Details": "Details",
   "Title_DirectReports": "Direct Report(s)",
   "Title_HelpDesk": "Help Desk",
