--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -146,12 +146,7 @@ Category_Label_EDIR_SETTINGS=eDirectory Settings
 Category_Label_EMAIL=Email
 Category_Label_EMAIL_SETTINGS=Email Settings
 Category_Label_EMAIL_TEMPLATES=Email Templates
-<<<<<<< Updated upstream
 Category_Label_EMAIL_PROFILES=Email Profile Settings
-=======
-Category_Label_EMAIL_PROFILES=Multiple Email Server Settings
-Category_Label_EMAIL_PROFILE_SETTING=Email Settings
->>>>>>> Stashed changes
 Category_Label_FORGOTTEN_USERNAME=Forgotten User Name
 Category_Label_GENERAL=Application
 Category_Label_GUEST=Guest Registration
@@ -336,11 +331,7 @@ Setting_Description_email.smtp.addresses=Specify an SMTP server address that sen
 Setting_Description_email.smtp.ports=Specify the network port number for the SMTP server.
 Setting_Description_email.smtp.usernames=Specify an SMTP user that logs in to the SMTP server so that it can send the emails @PwmAppName@ generates.  A blank value here sends SMTP messages without authentication.
 Setting_Description_email.smtp.userpasswords=Specify the password for the SMTP user.  A blank value here sends SMTP messages without authentication.
-Setting_Description_email.smtp.address=Specify an SMTP server address that sends the emails @PwmAppName@ generates.  Removing this setting prevents @PwmAppName@ from sending any emails.  Ensure that the server specified here allows relaying.  For best results, use a local SMTP server.
 Setting_Description_email.smtp.advancedSettings=Add Name/Value settings to control the behavior of the mail agent. Available settings are defined as part of the <a href\="https\://javamail.java.net/nonav/docs/api/com/sun/mail/smtp/package-summary.html">JavaMail API</a>. The settings must be in "name\=value" format, where name is the key value of a valid JavaMail API setting.
-Setting_Description_email.smtp.port=Specify the network port number for the SMTP server.
-Setting_Description_email.smtp.username=Specify an SMTP user that logs in to the SMTP server so that it can send the emails @PwmAppName@ generates.  A blank value here sends SMTP messages without authentication.
-Setting_Description_email.smtp.userpassword=Specify the password for the SMTP user.  A blank value here sends SMTP messages without authentication.
 Setting_Description_email.unlock=Define this template to send an email to users who unlock their own account.
 Setting_Description_email.updateguest=Define this template to send an email to updated guest users.
 Setting_Description_email.updateProfile=Define this template to send an email to users after a profile update.
@@ -825,13 +816,9 @@ Setting_Label_email.sendUsername=Send User Name Email
 Setting_Label_email.profile.list=Email Profiles
 Setting_Label_email.smtp.addresses=Email Server Address
 Setting_Label_email.smtp.ports=Email Server Port
-Setting_Label_email.smtp.usernames=Email Server User Name
+Setting_Label_email.smtp.usernames=SMTP Email Server User Name
 Setting_Label_email.smtp.userpasswords=Email Server Password
-Setting_Label_email.smtp.address=SMTP Email Server Address
 Setting_Label_email.smtp.advancedSettings=SMTP Email Advanced Settings
-Setting_Label_email.smtp.port=SMTP Email Server Port
-Setting_Label_email.smtp.username=SMTP Email Server User Name
-Setting_Label_email.smtp.userpassword=SMTP Email Server Password
 Setting_Label_email.unlock=Unlock Account Email
 Setting_Label_email.updateguest=Guest Registration Update Email
 Setting_Label_email.updateProfile.token=Update Profile Email Verification
