mark javascript form option settings as deprecated

--- a/server/src/main/resources/password/pwm/i18n/Config.properties
+++ b/server/src/main/resources/password/pwm/i18n/Config.properties
@@ -161,7 +161,7 @@ Tooltip_FormOptions_LinkLabel=Label to be displayed that tells where the link wi
 Tooltip_FormOptions_LinkURL=Full url that you want to go to when the link is selected.
 Tooltip_Form_ShowInNewWindow=Choose if the link will e opened in a new browser window
 Tooltip_FormOptions_Placeholder=Placeholder text to display in the form field with the field is not populated with a value.
-Tooltip_FormOptions_Javascript=Javascript to be added to the browser.
+Tooltip_FormOptions_Javascript=Javascript to be added to the browser.  This option is depreciated.  Use 'Settings -> User Interface -> Look & Feel -> Embedded JavaScript' instead.
 Tooltip_FormOptions_MultiValue=Display multiple values of the attribute.
 VerificationMethodDetail_PREVIOUS_AUTH=This method is passed when a user has previously authenticated using their browser.  There is no user interaction or display associated with this method.
 VerificationMethodDetail_ATTRIBUTES=User will be prompted for LDAP attribute values defined by the setting @PwmSettingReference:challenge.requiredAttributes@.
