setup-otp profiles and otp menu re-organization.

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -81,7 +81,9 @@ Category_Description_NEWUSER_SETTINGS=New user self-registration settings.  The 
 Category_Description_NOTES=Configuration Notes
 Category_Description_OAUTH=Integration with an OAuth identity server for SSO to this application.
 Category_Description_ORACLE_DS=Oracle Directory Server-specific settings
-Category_Description_OTP=Options for time-based one time passwords.
+Category_Description_OTP_PROFILE=Options for time-based one time passwords.
+Category_Description_OTP_SETTINGS=Options for time-based one time passwords.
+Category_Description_OTP_SETUP=Options for time-based one time passwords.
 Category_Description_PASSWORD_GLOBAL=Password related settings that apply to all users regardless of the password policy or profile appear here.  For profile-specific password settings, see Profiles -> Password Policy Profiles.
 Category_Description_PASSWORD_POLICY=Settings that define the LDAP directories that are used by the application.  If the user identities are in multiple LDAP directories, configure each directory as an LDAP Directory Profile.  Within each LDAP directory profile definition, you can control the individual servers and other settings for each LDAP directory.
 Category_Description_PEOPLE_SEARCH=The people search module provides basic white pages or directory lookup functionality to your users.  Customizations allow easy searching and display quick detailed information about your users' colleagues.
@@ -175,7 +177,9 @@ Category_Label_NEWUSER_SETTINGS=New User Settings
 Category_Label_NOTES=Configuration Notes
 Category_Label_OAUTH=OAuth
 Category_Label_ORACLE_DS=Oracle DS
-Category_Label_OTP=One Time Password
+Category_Label_OTP_PROFILE=OTP Profile
+Category_Label_OTP_SETTINGS=OTP Settings
+Category_Label_OTP_SETUP=Setup OTP
 Category_Label_PASSWORD_GLOBAL=Password Settings
 Category_Label_PASSWORD_POLICY=Password Policies
 Category_Label_PEOPLE_SEARCH=People Search
@@ -488,10 +492,11 @@ Setting_Description_oauth.idserver.dnAttributeName=Specify the attribute to requ
 Setting_Description_oauth.idserver.loginUrl=Specify the OAuth server login URL. This is the URL to redirect the user to for authentication.
 Setting_Description_oauth.idserver.secret=Specify the OAuth shared secret. The OAuth identity service provider (IdP) provides this value.
 Setting_Description_oauth.idserver.serverCerts=Import the certificate for the OAuth web service server.
-Setting_Description_otp.enabled=Enable this option to enable the configuration and use of a one-time password.
+Setting_Description_otp.enabled=Enable this option to allow the user to configure and save an one time password.
 Setting_Description_otp.forceSetup=Enable this option and enabled one-time passwords to have @PwmAppName@ direct the user to configure a one-time password secret when logging in. @PwmAppName@ forces the user to configure one-time password if they do not have a current valid secret stored.
-Setting_Description_otp.secret.allowSetup.queryMatch=Specify the permission used to determine if @PwmAppName@ permits a user to setup a one-time password secret.
-Setting_Description_otp.secret.encrypt=Enable this option to have @PwmAppName@ uses the Security Key to encrypt and decrypt token information, to make sure it is not readable as plain text. Multiple application instances must use the same Security Key.  If you change the Security Key, stored OTP passwords are no longer usable.
+Setting_Description_otp.profile.list=List of OTP Profiles
+Setting_Description_otp.secret.allowSetup.queryMatch=Specify the set of users that this OTP Setup profile will include.
+Setting_Description_otp.secret.encrypt=Enable this option to have @PwmAppName@ use the Security Key to encrypt and decrypt token information, to make sure it is not readable as plain text. Multiple application instances must use the same Security Key.  If you change the Security Key, stored OTP passwords are no longer usable.
 Setting_Description_otp.secret.identifier=Specify the User Identifier for OTP.  Macros are available.
 Setting_Description_otp.secret.ldap.attribute=Specify the LDAP attribute for storing the OTP secret. @PwmAppName@ only uses this setting when the storage method is set to LDAP.
 Setting_Description_otp.secret.readPreference=Select the location where to read the OTP secret. If you select an option with multiple values, @PwmAppName@ reads each location in turn until it finds a stored response.
@@ -971,9 +976,10 @@ Setting_Label_oauth.idserver.dnAttributeName=OAuth User Name/DN Login Attribute
 Setting_Label_oauth.idserver.loginUrl=OAuth Login URL
 Setting_Label_oauth.idserver.secret=OAuth Shared Secret
 Setting_Label_oauth.idserver.serverCerts=OAUTH Web Service Server Certificate
-Setting_Label_otp.enabled=Enable One Time Passwords
+Setting_Label_otp.enabled=Allow Saving One Time Passwords
 Setting_Label_otp.forceSetup=Force Setup of One Time Passwords
-Setting_Label_otp.secret.allowSetup.queryMatch=OTP Secret Setup Permission
+Setting_Label_otp.profile.list=OTP Profiles
+Setting_Label_otp.secret.allowSetup.queryMatch=One Time Password Profile Match
 Setting_Label_otp.secret.encrypt=Encrypt OTP secret
 Setting_Label_otp.secret.identifier=OTP Secret Identifier
 Setting_Label_otp.secret.ldap.attribute=OTP Secret LDAP Attribute
