converted rest docs to non-tabs fixed username reading logic in verifyresponses api and clarified docs improved error handling in authentication logic fixed error msg and data body input missing param error in signing-form, setpw, checkpw, verifyotp, verifyresp, challenge api

--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -252,10 +252,16 @@ Statistic_Label.RestSetPassword=WebService SetPassword Calls
 Statistic_Description.RestSetPassword=Number of external web service calls to the /setpassword REST interface.
 Statistic_Label.RestRandomPassword=WebService RandomPassword Calls
 Statistic_Description.RestRandomPassword=Number of external web service calls to the /randompassword REST interface.
+Statistic_Label.RestProfile=WebService Profile Calls
+Statistic_Description.RestProfile=Number of external web service calls to the /profile REST interface.
+Statistic_Label.RestSigningForm=WebService Signing Form Calls
+Statistic_Description.RestSigningForm=Number of external web service calls to the /signing/form REST interface.
 Statistic_Label.RestChallenges=WebService Challenge Calls
 Statistic_Description.RestChallenges=Number of external web service calls to the /challenges REST interface.
 Statistic_Label.RestVerifyChallenges=WebService Verify Challenge Calls
 Statistic_Description.RestVerifyChallenges=Number of external web service calls to the /verifychallenges REST interface.
+Statistic_Label.RestVerifyOTP=WebService Verify OTP Calls
+Statistic_Description.RestVerifyOTP=Number of external web service calls to the /verifyotp REST interface.
 Statistic_Label.RestHealth=WebService Health Calls
 Statistic_Description.RestHealth=Number of external web service calls to the /health REST interface.
 Statistic_Label.RestStatistics=WebService Statistic Calls
