support for bogus user forgotten password policy

--- a/server/src/main/resources/password/pwm/i18n/Error.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error.properties
@@ -159,6 +159,7 @@ Error_EnvironmentError=An error with the application environment has prevented t
 Error_ApplicationNotRunning=This functionality is not available until the application configuration is restricted.
 Error_EmailSendFailure=Error sending email item %1%, error: %2%
 Error_PasswordOnlyBad=Password incorrect.  Please try again.
+Error_RecoverySequenceIncomplete=A problem occurred during the forgotten password sequence, please try again.
 
 Error_RemoteErrorValue=Remote Error: %1%
 
