implement support for multiple email/sms token destinations in forgotten password.

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -337,6 +337,8 @@ Setting_Description_email.updateguest=Define this template to send an email to u
 Setting_Description_email.updateProfile=Define this template to send an email to users after a profile update.
 Setting_Description_email.updateProfile.token=Define this template to send an email to users during the profile email validation.
 Setting_Description_email.userMailAttribute=Specify the LDAP attribute that contains the users' email address.
+Setting_Description_email.userMailAttribute2=Specify the secondary LDAP attribute that contains the users' email address.
+Setting_Description_email.userMailAttribute3=Specify the tertiary LDAP attribute that contains the users' email address.
 Setting_Description_enableSessionVerification=Enable this option to verify browser sessions using an HTTP redirect and verification code.  This verification proves that the browser can correctly establish a session with the server.  Verification proves the browser either supports cookies or URL sessions (if enabled) and the communication channel between browser and application server is 'sticky' when there are multiple server instances.  Additionally, it helps prevent some types of XSS attacks.<br/><br/>The pre-loaded browser cache shows a "please wait" screen to the user during the verification.  This has the added benefit that the browser "pre-caches" many of the HTTP resources (JavaScript, CSS, images, and so forth) before it loads any actual pages.
 Setting_Description_events.alert.dailySummary.enable=Enable this option to send an email alert once a day (at 0\:00 GMT) that contains a summary of the day's statistics and health.
 Setting_Description_events.audit.maxAge=Specify the maximum age (in seconds) of the local audit event log.  The default is 30 days.
@@ -671,7 +673,9 @@ Setting_Description_sms.responseOkRegex=Specify the regular expression that you 
 Setting_Description_sms.senderID=Specify the alphanumerical sender identification. If blank, the provider uses a default or anonymous sender identification. In most cases, the SMS provider must validate the sender ID. Contact your provider for values that you can use as a valid sender identification.
 Setting_Description_sms.successResultCodes=Specify the HTTP Result codes that @PwmAppName@ consideres as successful send attempts.
 Setting_Description_sms.updateProfile.token.message=Specify the text of the SMS @PwmAppName@ sends during the profile update SMS phone number verification.
-Setting_Description_sms.userSmsAttribute=Specify the users' LDAP attribute containing the users' mobile phone numbers for SMS.
+Setting_Description_sms.userSmsAttribute=Specify the LDAP attribute containing the users' mobile phone numbers for SMS.
+Setting_Description_sms.userSmsAttribute2=Specify the secondary LDAP attribute containing the users' mobile phone numbers for SMS.
+Setting_Description_sms.userSmsAttribute3=Specify the tertiary LDAP attribute containing the users' mobile phone numbers for SMS.
 Setting_Description_sms.useUrlShortener=Enable this option to use a URL shortener service like tinyurl.com, bit.ly, and goo.gl. This enables searching the SMS text for HTTP and HTTPS URLs and replaces them with a shortened version. You can configure the service @PwmAppName@ uses under the Miscellaneous options. Enusre that you check View and Advanced options.
 Setting_Description_template.ldap=<p>This setting changes the default values throughout this configuration to reasonable values based on this value.  Only default (non-modified) settings are affected.  Any settings that have been modified from the default are unaffected.</p><p>You can change this setting at any time but use caution when doing so as the overall behavior of the application might change.  After changing this setting, review and test @PwmAppName@ to ensure the desired behavior occurs.</p>
 Setting_Description_template.storage=<p>This setting changes the default values throughout this configuration to reasonable values based on this value.  Only default (non-modified) settings are affected.  Any settings that have been modified from the default are unaffected.</p><p>You can change this setting at any time but use caution when doing so as the overall behavior of the application might change.  After changing this setting review and test @PwmAppName@ to ensure the desired behavior occurs.</p>
@@ -824,6 +828,8 @@ Setting_Label_email.updateguest=Guest Registration Update Email
 Setting_Label_email.updateProfile.token=Update Profile Email Verification
 Setting_Label_email.updateProfile=Update Profile Email
 Setting_Label_email.userMailAttribute=User Email Attribute
+Setting_Label_email.userMailAttribute2=Secondary User Email Attribute
+Setting_Label_email.userMailAttribute3=Tertiary User Email Attribute
 Setting_Label_enableSessionVerification=Sticky Session Verification
 Setting_Label_events.alert.dailySummary.enable=Daily Summary Alerts
 Setting_Label_events.audit.maxAge=LocalDB Audit Events Storage Max Age
@@ -1159,6 +1165,8 @@ Setting_Label_sms.senderID=SMS Sender ID
 Setting_Label_sms.successResultCodes=Successful HTTP Result Codes
 Setting_Label_sms.updateProfile.token.message=Update Profile SMS Verification Text
 Setting_Label_sms.userSmsAttribute=SMS Destination Address LDAP Attribute
+Setting_Label_sms.userSmsAttribute2=Secondary SMS Destination Address LDAP Attribute
+Setting_Label_sms.userSmsAttribute3=Tertiary SMS Destination Address LDAP Attribute
 Setting_Label_sms.useUrlShortener=Use URL Shortener
 Setting_Label_template.ldap=LDAP Vendor Default Settings
 Setting_Label_template.storage=Storage Default Settings
