add cr_policy configguide page add cr_policy config editor "change all" buttons

--- a/server/src/main/resources/password/pwm/i18n/ConfigGuide.properties
+++ b/server/src/main/resources/password/pwm/i18n/ConfigGuide.properties
@@ -41,3 +41,5 @@ password_title=Configuration Password
 password_title_verify=Verify Configuration Password
 template_description=<p>Begin your configuration by selecting the LDAP directory setting template.  You can change this setting later if you need to.</p><p>Setting this template will establish appropriate default values for many of the application settings.</p>
 title=@PwmAppName@ Configuration Guide
+cr_policy_title=Challenge/Response Questions
+cr_policy_description=<p>@PwmAppName@ includes a default list of challenge/response questions to use.  @PwmAppName@ does not require use of challenge/response questions, but if you do plan on using them you should review and update the questions so that they are appropriate for your organization and user community.  </p><p><b>It is good security practice to use unique security questions for each site. You should change the default questions whenever possible.</b></p><p>You can edit this list as well as set required questions and minimum number of questions in the configuration editor after completing the configuration guide.  The setting location is @PwmSettingReference\:challenge.randomChallenges@.</p>
