--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -322,7 +322,7 @@ Setting_Description_email.helpdesk.unlock=Define this template to send an email 
 Setting_Description_email.intruderNotice=Define this template to send an email when a userDN intruder lockout occurs.
 Setting_Description_email.newUser=Define this template to send an email to newly created users.
 Setting_Description_email.newUser.token=Define this template to send an email during the new user verification process.  You can use %TOKEN% to insert the token value into the email.
-Setting_Description_email.pwExpirationNotice=Email sent to users to notify the user of an impending password notification. 
+Setting_Description_email.pwNotice=Email sent to users to notify the user of an impending password notification. 
 Setting_Description_email.queueMaxAge=Specify the maximum age (in seconds) an email can wait in the send queue.  If an email is in the send queue longer than this time, @PwmAppName@ discards it.  Emails only persist in the send queue if there is an IO or network error to the SMTP server while sending the email.
 Setting_Description_email.sendpassword=Define this template to send an email during forgotten password reset process if you enabled the send password functionality.
 Setting_Description_email.sendUsername=Define this template to send an email for the forgotten user name process.
@@ -813,7 +813,7 @@ Setting_Label_email.helpdesk.unlock=Help Desk Unlock Account Email
 Setting_Label_email.intruderNotice=Intruder Notice Email
 Setting_Label_email.newUser=New User Email
 Setting_Label_email.newUser.token=New User Verification Email
-Setting_Label_email.pwExpirationNotice=Password Expiration Notification Email
+Setting_Label_email.pwNotice=Password Expiration Notification Email
 Setting_Label_email.queueMaxAge=Maximum Email Queue Age
 Setting_Label_email.sendpassword=Send Password Email
 Setting_Label_email.sendUsername=Send User Name Email
@@ -1202,10 +1202,12 @@ Setting_Label_wordlistCaseSensitive=Word List Case Sensitivity
 Category_Description_PW_EXP_NOTIFY=Password Expiration Notification
 Category_Label_PW_EXP_NOTIFY=Password Expiration Notification
 
-Setting_Label_pwExpiryNotify.enable=Enable Password Expiration Notification
-Setting_Label_pwExpiryNotify.queryString=Expiration Notification User Match
-Setting_Label_pwExpiryNotify.intervals=Expiration Notification Intervals
-Setting_Description_pwExpiryNotify.enable=Enable Password Expiration Notification
-Setting_Description_pwExpiryNotify.queryString=Expiration Notification User Match
-Setting_Description_pwExpiryNotify.intervals=Expiration Notification Intervals
+Setting_Label_pwNotify.enable=Enable Password Expiration Notification
+Setting_Label_pwNotify.queryString=Expiration Notification User Match
+Setting_Label_pwNotify.intervals=Expiration Notification Intervals
+Setting_Label_pwNotify.job.offSet=Job Offset
 
+Setting_Description_pwNotify.enable=Enable Password Expiration Notification
+Setting_Description_pwNotify.queryString=Expiration Notification User Match
+Setting_Description_pwNotify.intervals=Expiration Notification Intervals
+Setting_Description_pwNotify.job.offSet=Job Offset
